After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756990 - dates (today, yesterday...) show a "missing icon" icon
dates (today, yesterday...) show a "missing icon" icon
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Archives
3.12.x
Other All
: Normal minor
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2015-10-22 20:42 UTC by Hussam Al-Tayeb
Modified: 2016-07-22 00:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
chat history (67.54 KB, image/png)
2015-10-22 20:42 UTC, Hussam Al-Tayeb
  Details
use x-office-calendar icon instead (395 bytes, patch)
2015-10-22 21:25 UTC, Hussam Al-Tayeb
committed Details | Review
stock_calendar.png (2.78 KB, image/png)
2015-10-23 08:12 UTC, Debarshi Ray
  Details

Description Hussam Al-Tayeb 2015-10-22 20:42:26 UTC
Created attachment 313893 [details]
chat history

Dates (today, yesterday...) show a "missing icon" icon. This is easier to notice through a screenshot so I am attaching one.

Notice the generic icons next to the mouse pointer next to Today and Yesterday.
Comment 1 Hussam Al-Tayeb 2015-10-22 21:25:34 UTC
Created attachment 313895 [details] [review]
use x-office-calendar icon instead

andlabs on irc suggested x-office-calendar icon instead.
so I edited the file and tried it. it looks good actually.
This is a patch that makes it look like this instead http://i.imgur.com/XWcd8Wx.png
Comment 2 Debarshi Ray 2015-10-23 08:12:03 UTC
Created attachment 313913 [details]
stock_calendar.png

The stock_calendar icon was already gone in GNOME 3.14.x. Even though we are still in the 3.12.x series, we already depend on things that are newer than that, so, yes, we should find a replacement.
Comment 3 Michael Catanzaro 2016-07-22 00:44:42 UTC
Thanks