Fix missing date icons in chat history window

use x-office-calendar icon instead

https://bugzilla.gnome.org/show_bug.cgi?id=756990